# gemini2html

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
doc/: gemlog.avif
issues/: 1-Finish-Project.md  1. Finish Project.md  2-Specs.md  2. Specs.md  2. 📝 Specs.md  2.Specs.md  3-Communication.md  README.md
src/: lib.rs  main.rs  style.css
src/snapshots/: gemini2html__tests__convert_tree-2.snap  gemini2html__tests__convert_tree-3.snap  gemini2html__tests__convert_tree-4.snap  gemini2html__tests__convert_tree.snap
tests/: gemini_file.gmi  html_file.html  non_gemini_file.txt
tests/images/: avatar.avif
tests/subdir/: subfile.gmi
tests/subdir/subsubdir/: subfile.gmi
🪧 issues/: 2. 📝 Specs.md
