[package]
name = "gemini2html"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml", "redactions"] }

[profile.release]
panic = 'abort' # No unwinding on panic
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1

[profile.dev.package]
insta.opt-level = 3

[profile.dev]
debug = 0
strip = "debuginfo"
